# node-require

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  ACKNOWLEDGEMENTS.md  CHANGELOG.md  EXTENDING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: docs.yml  format.yml  lint.yml  type-check.yml
changelogs/: _template.rst.jinja
docs/: Makefile  api.rst  changelog.rst  conf.py  index.rst  make.bat  quickstart.rst  requirements.txt
example/: main.py
example/modules/: my_module.py
node_require/: __init__.py  bson_loader.py  exceptions.py  json_loader.py  module_loader.py  req_impl.py  require.py  toml_loader.py  yaml_loader.py
