# SPDX-License-Identifier: MIT

[project]
name = "node-require"
description = "Support for file `require()`ing, like in Node.js."
authors = [{ name = "elenakrittik", email = "dev.elenakrittik@gmail.com" }]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
keywords = [
    "nodejs",
    "node.js",
    "loading",
    "require",
    "imports",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/elenakrittik/node-require"
Documentation = "https://node-require.readthedocs.io/"

[project.optional-dependencies]
toml = ["toml>=0.10"]
yaml = ["PyYAML>=6.0"]
bson = ["bson>=0.5"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = ["pre-commit>=3.3.3"]
type-check = ["pyright>=1.1.324"]
lint = ["ruff>=0.0.286"]
format = ["yapf>=0.40.1"]
# N.B. Keep in sync with docs/requirements.txt
docs = [
    "Sphinx>=7.1.2",
    "sphinxcontrib-trio>=1.1.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinxcontrib-towncrier>=0.3.2a0",
    "sphinx-rtd-theme>=1.3.0",
]

[tool.pdm.version]
source = "file"
path = "node_require/__init__.py"

[tool.pdm.scripts]
format = { composite = [
    "yapf node_require/ --recursive --in-place",
    "yapf docs/ --recursive --in-place",
], help = "Run yapf" }
docs = { cmd = "sphinx-autobuild docs docs/_build/html", help = "Run Sphinx documentation server" }
lint = { cmd = "ruff ./node_require ./docs", help = "Run ruff" }
pyright = { cmd = "pyright node_require docs", help = "Run pyright" }

# You should generally use above commands instead
yapf_check = { composite = [
    "yapf node_require/ --recursive --diff",
    "yapf docs/ --recursive --diff",
] }
setup_env = { cmd = "pdm install -d -G:all", help = "Set up the local environment and all dependencies" }
post_setup_env = { cmd = "pre-commit install --install-hooks" }

[tool.pyright]
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
reportMissingTypeStubs = false
# devs should not interfere with pdm defaults, otherwise it's up to them to fix arising issues
venvPath = "."
venv = ".venv"
pythonVersion = "3.9"

[tool.yapf]
based_on_style = "pep8"
column_limit = 100
spaces_around_default_or_named_assign = true
spaces_around_dict_delimiters = true
spaces_before_comment = 2
split_before_dot = true
coalesce_brackets = true
dedent_closing_brackets = true

[tool.ruff]
line-length = 100
target-version = "py39"

select = [
    "F",       # pyflakes
    "E", "W",  # pycodestyle
    "D2",      # pydocstyle, docstring formatting
    "D4",      # pydocstyle, docstring structure/content
    "ANN",     # flake8-annotations
    "ASYNC",   # flake8-async
    "S",       # flake8-bandit
    "B",       # flake8-bugbear
    "COM",     # flake8-commas
    "C4",      # flake8-comprehensions
    "DTZ",     # flake8-datetimez
    "EM",      # flake8-errmsg
    "PIE",     # flake8-pie
    "Q",       # flake8-quotes
    "RSE",     # flake8-raise
    "RET",     # flake8-return
    "SIM",     # flake8-simplify
    "TID",     # flake8-tidy-imports
    "TCH",     # flake8-type-checking
    # "PT",      # flake8-pytest-style
    "TD",      # flake8-todos
    # "FIX",     # flake8-fixme
    "ERA",     # eradicate
    "PGH",     # pygrep-hooks
    "PL",      # pylint
    "TRY",     # tryceratops
    "FLY",     # flynt
    "PERF",    # perflint
    "RUF",     # ruff
    "I",       # isort
]

ignore = [
    "ANN101",  # requires explicit self: Self
    "D203",    # incompatible with D211
    "D213",    # incompatible with D212
    "RET503",  # requires explicit `return None`
    "F403",    # basically disallows the usage of star imports
    "EM101",   # forces to not use string literals as exception messages
    "EM102",   # same as above except for f-string literals
    "TRY003",  # suggests making a custom exception class, but it's not rust so i gotta ignore this
    "B028",    # requires explicit `stackelevel=...` in warnings.warn() calls
    "PGH003",  # requires explicit error in type: ignores
    "ANN401",  # no Any in **extras
    "PLR0912", # too much branches
    "D402",    # false positives
]

[tool.towncrier]
directory = "changelogs"
package = "node_require"
filename = "docs/changelog.rst"
template = "changelogs/_template.rst.jinja"
title_format = false
underlines = "-~"
issue_format = ":issue:`{issue}`"

    [[tool.towncrier.type]]
    directory = "breaking"
    name = "Breaking Changes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "deprecate"
    name = "Deprecations"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "feat"
    name = "New Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "fix"
    name = "Bug Fixes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "docs"
    name = "Documentation"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "misc"
    name = "Miscellaneous"
    showcontent = true
